--- a/mars/build.gradle
+++ b/mars/build.gradle
@@ -4,6 +4,10 @@ android {
     compileSdkVersion 23
     buildToolsVersion "23.0.3"
 
+    repositories {
+        maven { url "https://jitpack.io" }
+    }
+
     defaultConfig {
         applicationId "net.ddns.sabr.mars"
         minSdkVersion 18
@@ -22,11 +26,12 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile project(':session')
+    compile project(':support')
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
     compile 'com.android.support:cardview-v7:23.3.0'
     compile 'com.android.support:recyclerview-v7:23.3.0'
     compile 'com.google.code.gson:gson:2.6.1'
+    compile 'com.github.yesidlazaro:GmailBackground:1.1'
     compile project(path: ':backend', configuration: 'android-endpoints')
 }
