--- a/janus/build.gradle
+++ b/janus/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.google.code.gson:gson:2.6.1'
     compile project(path: ':backend', configuration: 'android-endpoints')
+    compile project(path: ':support')
 }
