--- a/janus/build.gradle
+++ b/janus/build.gradle
@@ -20,11 +20,14 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile project(':support')
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.google.code.gson:gson:2.6.1'
+    compile 'commons-io:commons-io:2.4'
+    compile 'de.mindpipe.android:android-logging-log4j:1.0.3'
     compile project(path: ':backend', configuration: 'android-endpoints')
     compile project(path: ':support')
+
 }
