--- a/mars/build.gradle
+++ b/mars/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "net.ddns.sabr.mars"
         minSdkVersion 18
         targetSdkVersion 23
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 3
+        versionName "1.0.2"
     }
     buildTypes {
         release {
@@ -26,7 +26,7 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     testCompile 'junit:junit:4.12'
     compile project(':support')
     compile 'com.android.support:appcompat-v7:23.3.0'
@@ -36,5 +36,7 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.1'
     compile 'com.sun.mail:android-mail:1.5.5'
     compile 'com.sun.mail:android-activation:1.5.5'
+    compile 'commons-io:commons-io:2.4'
+    compile 'com.joanzapata.pdfview:android-pdfview:1.0.4@aar'
     compile project(path: ':backend', configuration: 'android-endpoints')
 }
