--- a/janus/build.gradle
+++ b/janus/build.gradle
@@ -2,10 +2,10 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion "24.0.0 rc3"
 
     defaultConfig {
-        applicationId "net.ddns.sabr.vulcan"
+        applicationId "net.ddns.sabr.janus"
         minSdkVersion 18
         targetSdkVersion 23
         versionCode 1
@@ -20,11 +20,10 @@ android {
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
-    compile project(':support')
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.google.code.gson:gson:2.6.1'
-    compile 'commons-io:commons-io:2.4'
+    compile project(':support')
     compile project(path: ':backend', configuration: 'android-endpoints')
 }
