--- a/mars/build.gradle
+++ b/mars/build.gradle
@@ -2,14 +2,14 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    buildToolsVersion "24.0.0 rc3"
 
     defaultConfig {
         applicationId "net.ddns.sabr.mars"
         minSdkVersion 18
         targetSdkVersion 23
-        versionCode 4
-        versionName "1.0.3"
+        versionCode 1
+        versionName "1.0"
     }
     buildTypes {
         release {
@@ -17,17 +17,13 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
-
-    repositories {
-        maven {
-            url "https://maven.java.net/content/groups/public/"
-        }
-    }
 }
 
 dependencies {
-    compile fileTree(include: ['*.jar'], dir: 'libs')
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:appcompat-v7:23.3.0'
+    compile project(path: ':backend', configuration: 'android-endpoints')
     compile project(':support')
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile 'com.android.support:design:23.3.0'
@@ -36,5 +32,4 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.1'
     compile 'com.sun.mail:android-mail:1.5.5'
     compile 'com.sun.mail:android-activation:1.5.5'
-    compile project(path: ':backend', configuration: 'android-endpoints')
 }
