--- a/mars/build.gradle
+++ b/mars/build.gradle
@@ -8,8 +8,8 @@ android {
         applicationId "net.ddns.sabr.mars"
         minSdkVersion 18
         targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+        versionCode 5
+        versionName "1.0.4"
     }
     buildTypes {
         release {
@@ -17,11 +17,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_7
+        targetCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:23.3.0'
     compile project(path: ':backend', configuration: 'android-endpoints')
     compile project(':support')
@@ -32,4 +35,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.6.1'
     compile 'com.sun.mail:android-mail:1.5.5'
     compile 'com.sun.mail:android-activation:1.5.5'
+    compile 'commons-io:commons-io:2.4'
 }
